--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,13 @@ jobs:
     - name: Set VERSION from tag
       run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
 
+    - name: Install X11 + OpenGL build dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y \
+          libc6-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev \
+          libxrandr-dev libxxf86vm-dev libasound2-dev pkg-config
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
